{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 168,
  "lineage": "f34c8e78-d50b-aa93-bd44-1e4b2f6403ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c6177f250e07ec1",
            "arn": "arn:aws:ec2:us-east-1:348469890441:instance/i-095c2fde74b83797c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095c2fde74b83797c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myllave",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abc562f5db507044",
            "private_dns": "ip-10-10-0-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.53",
            "public_ip": "18.232.85.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051cfcdec84e78984",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09987a04536d4d7f1",
            "tags": {
              "Name": "apache-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "apache-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Yo",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e7ba3e442af79e9"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348469890441:internet-gateway/igw-0ed3d90efdf90ba31",
            "id": "igw-0ed3d90efdf90ba31",
            "owner_id": "348469890441",
            "tags": {
              "Name": "igw vpc virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "igw vpc virginia-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Yo",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-053f9bffe82c904a8"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348469890441:route-table/rtb-0f30ece90269267ed",
            "id": "rtb-0f30ece90269267ed",
            "owner_id": "348469890441",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed3d90efdf90ba31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "public crt-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Yo",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-053f9bffe82c904a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce790bae17d3187a",
            "route_table_id": "rtb-0f30ece90269267ed",
            "subnet_id": "subnet-09987a04536d4d7f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348469890441:security-group/sg-00e7ba3e442af79e9",
            "description": "Allow SSH inbound traffic and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e7ba3e442af79e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "348469890441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public Instance SG-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Yo",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-053f9bffe82c904a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348469890441:subnet/subnet-0145865908b03dac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0145865908b03dac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348469890441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_temp-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "private_subnet_temp-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Yo",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-053f9bffe82c904a8"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348469890441:subnet/subnet-09987a04536d4d7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09987a04536d4d7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "348469890441",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_temp-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "public_subnet_temp-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Yo",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-053f9bffe82c904a8"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348469890441:vpc/vpc-053f9bffe82c904a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-05d9f2bb85d829fd8",
            "default_route_table_id": "rtb-0415c1c50fe3b9ff8",
            "default_security_group_id": "sg-0ab0aa3c29bc86139",
            "dhcp_options_id": "dopt-0daaebfeba5a561ec",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053f9bffe82c904a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0415c1c50fe3b9ff8",
            "owner_id": "348469890441",
            "tags": {
              "Name": "vpc_virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "vpc_virginia-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Yo",
              "project": "cerberus",
              "region": "virginia"
            }
          }
        }
      ]
    }
  ]
}